Fix overflow

--- a/styles/LandingPage/Hero.module.css
+++ b/styles/LandingPage/Hero.module.css
@@ -7,7 +7,7 @@
     background-color: #F8F9FA;
     min-height: 100vh;
     padding-top: 65px;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .feedback-button{
